--- a/AutomatedDesktopBackgroundUI/Views/SettingsWindow.xaml
+++ b/AutomatedDesktopBackgroundUI/Views/SettingsWindow.xaml
@@ -5,10 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AutomatedDesktopBackgroundUI"
         mc:Ignorable="d"
-        Title="SettingsWindow" Height="450" Width="900" WindowStyle="None" AllowsTransparency="True" WindowStartupLocation="CenterScreen">
-    <Window.Background>
-        <ImageBrush ImageSource="/Automated Desktop;component/Images/MainWindowPane.png"/>
-    </Window.Background>
+        Title="SettingsWindow" Height="450" Width="900" WindowStyle="None" AllowsTransparency="True" WindowStartupLocation="CenterScreen" Background="Transparent">
+    <Border  Background="{StaticResource backgroundColor}" BorderBrush="{StaticResource fontColor}" BorderThickness="2" CornerRadius="10">
     <Grid>
         <ComboBox x:Name="backgroundCombobox" HorizontalAlignment="Left" Margin="283,143,0,0" VerticalAlignment="Top" Width="142"/>
         <TextBox x:Name="backgroundRefreshTextBox" HorizontalAlignment="Left" Height="23" Margin="70,143,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.486,1.997" PreviewTextInput="CheckIfNumber"/>
@@ -32,4 +30,5 @@
         </TextBlock>
         <Border BorderBrush="Black" BorderThickness="1" CornerRadius="3"  HorizontalAlignment="Left" Height="149" Margin="572,171,0,0" VerticalAlignment="Top" Width="260"/>
     </Grid>
+    </Border>
 </Window>
